--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "NODE_ENV=production node server",
-        "dev": "NODE_ENV=development nodemon server"
+        "start": "NODE_ENV=production PORT=3000 node server",
+        "dev": "NODE_ENV=development PORT=5000 nodemon server"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "dotenv": "^10.0.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongoose": "^5.13.3",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "cors": "^2.8.5",
         "nodemon": "^2.0.12"
     }
 }
